tests/errors/surf_cls_02.ki
# calling a private method (_secret) from outside the class is an error
class C:
    var _secret = Function(self):
        return 1
var c = C()
discard c._secret()
